--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -99,7 +99,8 @@
             <button id="toggle">hide /show skills</button>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
+    
 </body>
 
 </html>
