--- a/milestone3/index.html
+++ b/milestone3/index.html
@@ -43,6 +43,6 @@
     </form>
     <br>
     <div id="resume-display"></div>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
