--- a/milestone4/index.html
+++ b/milestone4/index.html
@@ -43,6 +43,6 @@
     </form>
     <br>
     <div id="resume-display" contenteditable="true"></div>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
