--- a/milestone5/index.html
+++ b/milestone5/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><i>Shareable Resume Builder</i></h1>
-    <form id="resume-form">
+    <form id="resume">
         <fieldset>
             <legend>Personal Information</legend>
 
@@ -46,16 +46,17 @@
         <button type="submit"><b>Generate Resume</b></button>
     </form>
     <br>
-    <div id="resume-display" contenteditable="true"></div>
+    <div id="display" contenteditable="true"></div>
     <br>
     <!-- selection for shareable and download option -->
+     
      <div id="shareable" style="display: none;">
         <h2>Shareable Link</h2>
         <p><i>Here is your unique link to view or edit your resume:</i></p>
         <a href="#" id="shareable-link" target="_blank"></a>
         <br>
-        <button id="download"><b><i>download as PDF</i></b></button>
+        <button id="download"><b><i>Download as PDF</i></b></button>
      </div>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
